data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4181.wast
;; 10. **Test Description**: Set up a loop that makes indirect calls using `call_indirect` to functions that each modify a stack variable involved in the main loop exit condition. The loop should exit when the stack variable hits a threshold, but improper operand handling causes this value to become corrupt.     - **Constraint Being Checked**: Accurate stack state management and value preservation across indirect calls.     - **Relation to Infinite Loops**: Corruption of stack state causes the loop exit condition to never be satisfied, leading to infinite loops.

(assert_invalid
  (module
    (type $sig1 (func (param i32) (result i32)))
    (type $sig2 (func (param i32) (result i32)))
    (func $inc1 (param $p i32) (result i32) (local.get $p) (i32.const 1) (i32.add))
    (func $dec1 (param $p i32) (result i32) (local.get $p) (i32.const 1) (i32.sub))
    (table funcref (elem $inc1 $dec1))
    (func $main (param $thresh i32) (result i32)
      (local $val i32)
      (local.set $val (i32.const 10))
      (block $exit
        (loop $loop
          (local.set $val (call_indirect (type $sig1) (local.get $val) (local.get $val)))
          (local.get $val)
          (local.get $thresh)
          (i32.lt_s)
          (br_if $exit)
          (br $loop)
        )
      )
      (local.get $val)
    )
  )
  "type mismatch"
)